# jax-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: benchmarks.rs  parity_bench.rs
examples/: basic.rs  gpu_conv_fft.rs  gpu_matmul.rs  gpu_random.rs  mlp_training.rs  quickstart.rs  test_exponential.rs  test_logistic.rs
scripts/: compare_perf.sh
src/: array.rs  buffer.rs  device.rs  dtype.rs  lib.rs  nn.rs  optim.rs  random.rs  scipy.rs  shape.rs
src/backend/: mod.rs  ops.rs  shaders.rs  webgpu.rs
src/ops/: binary.rs  comparison.rs  control.rs  creation.rs  einsum.rs  fft.rs  linalg.rs  manipulation.rs  mod.rs  reduce.rs  sort.rs  unary.rs
src/trace/: fusion.rs  grad.rs  interpreter.rs  ir.rs  jit.rs  mod.rs  tracer.rs  transpose_rules.rs  vmap.rs
tests/: cross_backend.rs  gpu_tests.rs  gradient_correctness.rs  integration.rs  numerical_accuracy.rs  property_tests.rs  test.rs
